--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "nope-api-jwt",
+    "name": "reservation-salle-backend",
     "version": "1.0.0",
     "main": "server.js",
     "type": "module",
