--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vite-todo-app",
+    "name": "reservation-salle-frontend",
     "private": true,
     "version": "0.0.0",
     "type": "module",
