Ajout fichiers backend
- Ajout de db.js (données db)
- ajout de auth.controller.js (fonctions d'actions comme login ou register)
- ajout de auth.middleware (token generation)
- ajout de user.model (fonctions qui interagissent avec la db pour les users)
- ajout de auth.routes (route + fonction à activer)
- ajout de code dans server.js
- modification du readme

--- a/BACKEND/.env.example
+++ b/BACKEND/.env.example
@@ -1,7 +1,13 @@
+# server
 PORT=5000
+NODE_ENV=development
+
+# my sql
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=
 DB_NAME=starter_kit
+
+# jwt
 JWT_SECRET=insert_secret_here
 JWT_EXPIRES=7d
